[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/objects/Rock.gd" type="Script" id=1]
[ext_resource path="res://audio/sfx/rockBreak.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/sfx/rockImpcat.wav" type="AudioStream" id=3]
[ext_resource path="res://graphics/images/terrain/spike.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 36 )

[node name="Rock" type="Node2D"]
script = ExtResource( 1 )

[node name="BreakPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ImpactPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Rock" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7

[node name="Sprite" type="Sprite" parent="Rock"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock"]
shape = SubResource( 1 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="Rock" to="." method="_on_Rock_body_entered"]
